# HomeLab

./: README.md  pyproject.toml
homelab/: playbook.yaml
homelab/inventory/: rapsberrypi.yml
inventory/: hosts
playbooks/: boot.yml  dotfiles.yml  indi.yml  shell.yml  storage.yml  system_packages.yml
playbooks/roles/boot/tasks/: main.yml
playbooks/roles/dotfiles/tasks/: main.yml
playbooks/roles/dotfiles/vars/: main.yml
playbooks/roles/indi/tasks/: main.yml
playbooks/roles/indi/vars/: main.yml
playbooks/roles/shell/tasks/: main.yml
playbooks/roles/shell/vars/: main.yml
playbooks/roles/storage/tasks/: main.yml
playbooks/roles/system_packages/tasks/: main.yml
playbooks/roles/system_packages/vars/: main.yml
playbooks/roles/upgrade/tasks/: main.yml
roles/boot/tasks/: main.yml
