[tool.poetry]
name = "homelab"
version = "0.1.0"
description = "Ansible Playbooks for my homelab"
authors = ["Mayank Pathak <onlinejudge95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
